Add run command option
Add PUT /apps/{appId}/run endpoint
Ability to run dokku run appName command
Update doc
